# fifteen-puzzle

./: .clang-format  .gitignore  CMakeLists.txt
Game/: Application.cc  Application.hh  CMakeLists.txt  Game.cc  Game.hh  GameApplication.cc  GameApplication.hh  Heuristic.cc  Heuristic.hh  Main.cc  Solver.cc  Solver.hh
